mod: added shoutcaster management functions, refs #1292

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -41,6 +41,7 @@ set sv_privateclients "4"                       // if set > 0, then this number 
 set sv_privatepassword ""                       // that have "password" set to the value of "sv_privatePassword"
 set rconpassword ""                             // remote console access password
 set refereePassword ""                          // referee status password
+set shoutcastPassword ""                        // shoutcast status password
 
 // DL, RATE
 
