game: added option to disable rifle grenades, fixes #1273
team_riflegrenades = 1 is default. 0 disables them for both teams, while
leaving the rifles themselves available.

--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -53,6 +53,8 @@ init
   setl team_maxAirstrikes "0"
   setl team_maxArtillery "0"
 
+  setl team_riflegrenades "0"
+
   setl match_latejoin "1"
   setl match_minplayers "2"
   setl match_mutespecs "0"
