--- a/etmain/configs/defaultcomp.config
+++ b/etmain/configs/defaultcomp.config
@@ -29,6 +29,8 @@ init
 	setl team_maxAirstrikes "0"
 	setl team_maxArtillery "0"
 
+	setl team_riflegrenades "1"
+
 	setl g_pronedelay "1"
 	setl g_shove "60"
 
