--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -47,6 +47,7 @@ set team_maxRiflegrenades "-1"
 set team_maxAirstrikes "0"
 set team_maxArtillery "0"
 set team_maxLandmines "10"
+set team_riflegrenades "1"
 
 // MISC
 
