game: fixed drop objective possible spam, refs #1316

--- a/etmain/default.cfg
+++ b/etmain/default.cfg
@@ -35,6 +35,7 @@ bind SHIFT "+sprint"
 bind CAPSLOCK "+speed"
 
 bind f "+activate"
+bind h "dropobj"
 bind b "+zoom"
 bind g "+mapexpand"
 bind r "+reload"
