--- a/etmain/default_left.cfg
+++ b/etmain/default_left.cfg
@@ -35,6 +35,7 @@ bind MOUSE3 "+sprint"
 bind CAPSLOCK "+speed"
 
 bind ENTER "+activate"
+bind H "dropobj"
 bind B "+zoom"
 bind ' "+mapexpand"
 bind END "+reload"
