mod : simplify animation index for alt weapon
* Separate syrigue/adrenaline and satchel/satchel/det animation by creating specific animation file for adrenaline and satchel_det
* Use WEAP_IDLE2 / WEAP_ATTACK2 / WEAP_RELOAD2 for alt weapon animation (both SET weapon and RIFLENADE are using it)
* Merge silencer pistol animation in pistol animation (same file)
* Remove animation index from weapon table since index are defined for specific usage (add genericity)
* Rename altSwitchTimeBegin/altSwitchTimeFinish to altSwitchTimeFrom/altSwitchTimeTo

--- a/etmain/models/multiplayer/mg42/weapon.cfg
+++ b/etmain/models/multiplayer/mg42/weapon.cfg
@@ -22,15 +22,15 @@ newfmt
 
 1	8	20	8	0	0	0	// ATTACK1
 158	3	20	3	0	0	0   // ATTACK2			// attack in prone
-9	10	20	0	0	0	0	// WEAP_ATTACK_LASTSHOT
+9	10	20	0	0	0	0	// ATTACK_LASTSHOT
 
 19	11	40	0	0	0	0	// DROP
 30	25	45	0	0	0	0	// RAISE
 53	36	14	1	0	0	0	// RELOAD1
-186	30	24	0	0	0	0	// RELOAD2			// unset and drop
-160	27	9	0	0	0	0	// RELOAD3			// reload in prone
+160	27	9	0	0	0	0	// RELOAD2			// reload in prone
+103	31	18	0	0	0	0	// RELOAD3			// raise and set
 
-186	19	18	0	0	0	0	// WEAP_ALTSWITCHFROM	// unset bipod
-111	20	18	0	0	0	0	// WEAP_ALTSWITCHTO		// set bipod
-103	31	18	0	0	0	0	// DROP2			    // raise and set
+111	20	18	0	0	0	0	// ALTSWITCHFROM	// set bipod
+186	19	18	0	0	0	0	// ALTSWITCHTO		// unset bipod
+186	30	24	0	0	0	0	// DROP2			// unset and drop
 
