--- a/etmain/models/multiplayer/satchel/weapon.cfg
+++ b/etmain/models/multiplayer/satchel/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //    
-//          Satchel Charge and radio detinoator
+//          Satchel Charge
 //
 ///////////////////////
 
@@ -17,18 +17,18 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-8	1	20	1	0	0	0	// IDLE1        Bag
-24	1	20	1	0	0	0	// IDLE2        Radio
+8	1	20	1	0	0	0	// IDLE1
+0	1	20	1	0	0	0	// IDLE2	  notused
 
-3	4	20	0	0	0	0	// ATTACK1	Bag
-24	13	18	1	0	0	0	// ATTACK2      Radio
+3	4	20	0	0	0	0	// ATTACK1
+0	1	20	0	0	0	0	// ATTACK2    notused
 0	1	20	0	0	0	0	// ATTACK3    notused
 
-8	7	20	0	0	0	0	// DROP		Bag	
-0	8	16	0	0	0	0	// RAISE	Bag
-37	8	20	0	0	0	0	// Drop		Radio
-15	9	18	1	0	0	0	// Raise	Radio
-0	1	18	1	0	0	0	// RELOAD3    notused
+8	7	20	0	0	0	0	// DROP
+0	8	16	0	0	0	0	// RAISE
+0	1	20	1	0	0	0	// RELOAD1	  notused
+0	1	20	1	0	0	0	// RELOAD2	  notused
+0	1	20	1	0	0	0	// RELOAD3    notused
 
 0	1	20	1	0	0	0	// ALTSWITCH  notused
 0	1	20	1	0	0	0	// ALTSWITCH  notused
