--- a/etmain/models/multiplayer/satchel_det/weapon.cfg
+++ b/etmain/models/multiplayer/satchel_det/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
-//
-//	Silenced Colt
+//    
+//		Satchel Charge Detonator
 //
 ///////////////////////
 
@@ -17,19 +17,19 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-0	1	20	0	0	0	0	// IDLE1
-0	1	20	0	0	0	0	// IDLE2
+24	1	20	1	0	0	0	// IDLE1
+0	1	20	1	0	0	0	// IDLE2	  notused
 
-1	7	19	0	0	0	0	// ATTACK1	was 15 fps
-1	6	20	0	0	0	0	// ATTACK2
-1	6	20	0	0	0	0	// ATTACK3
+24	13	18	1	0	0	0	// ATTACK1
+0	1	20	0	0	0	0	// ATTACK2    notused
+0	1	20	0	0	0	0	// ATTACK3    notused
 
-7	5	20	0	0	0	0	// DROP
-12	4	16	0	0	0	0	// RAISE
-17	37	20	0	0	0	0	// RELOAD1	was 16 fps
-17	37	27	0	0	0	0	// RELOAD2
-17	37	20	0	0	0	0	// RELOAD3
+37	8	20	0	0	0	0   // DROP
+15	9	18	1	0	0	0   // RAISE
+0	1	20	1	0	0	0	// RELOAD1	  notused
+0	1	20	1	0	0	0	// RELOAD2	  notused
+0	1	20	1	0	0	0	// RELOAD3    notused
 
-80	23	18	0	0	0	0	// ALTSWITCH (to)
-56	22	18	0	0	0	0	// ALTSWITCH (from)
-0	1	20	0	0	0	0	// WEAP_DROP2 notused
+0	1	20	1	0	0	0	// ALTSWITCH  notused
+0	1	20	1	0	0	0	// ALTSWITCH  notused
+0	1	20	1	0	0	0	// DROP2      notused
