--- a/etmain/models/multiplayer/syringe/weapon.cfg
+++ b/etmain/models/multiplayer/syringe/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //
-//	Silenced Luger
+//		SYRINGE
 //
 ///////////////////////
 
@@ -17,19 +17,20 @@ newfmt
 ///   /   /   /   /   /   ______________________________/
 //   /   /   /   /   /   /
 
-0	1	20	0	0	0	0	// IDLE1
-0	1	20	0	0	0	0	// IDLE2
+0	1	15	0	0	0	0	// IDLE1
+0	1	15	0	0	0	0	// IDLE2
 
-1	7	19	0	0	0	0	// ATTACK1	was 15 fps
-1	6	20	0	0	0	0	// ATTACK2
-1	106	20	0	0	0	0	// ATTACK3
+1	13	15	0	0	0	0	// ATTACK1
+0	1	15	0	0	0	0	// ATTACK2
+1	13	15	0	0	0	0	// ATTACKLASTSHOT
 
-7	5	20	0	0	0	0	// DROP
-12	4	16	0	0	0	0	// RAISE
-17	38	20	0	0	0	0	// RELOAD1	was 16 fps
-17	38	27	0	0	0	0	// RELOAD2
-17	38	20	0	0	0	0	// RELOAD3
+14	5	15	0	0	0	0	// DROP
+21	4	15	0	0	0	0	// RAISE
+0	1	15	0	0	0	0	// RELOAD1
+0	1	15	0	0	0	0	// RELOAD2
+0	1	15	0	0	0	0	// RELOAD3
 
-81	19	16	0	0	0	0	// (1.2 sec) ALTSWITCH switching away
-56	24	20	0	0	0	0	// (1.19 sec) ALTSWITCH switching to
-0	1	20	1	0	0	0	// DROP2
+0	1	15	0	0	0	0	// WEAP_ALTSWITCHFROM
+0	1	15	0	0	0	0	// WEAP_ALTSWITCHTO
+
+0	1	15	0	0	0	0	// WEAP_DROP2
