--- a/etmain/models/weapons2/colt/weapon.cfg
+++ b/etmain/models/weapons2/colt/weapon.cfg
@@ -30,6 +30,6 @@ newfmt
 17	38	27	0	0	0	0	// RELOAD2
 17	38	20	0	0	0	0	// RELOAD3
 
-0	1	20	0	0	0	0	// ALTSWITCH
-0	1	20	0	0	0	0	// ALTSWITCH
+56	22	18	0	0	0	0	// ALTSWITCHFROM
+80	23	18	0	0	0	0	// ALTSWITCHTO
 0	1	20	1	0	0	0	// DROP2
