mod: add custom weapon anim cfg
Following weapon got their custom anim cfg :

* Binocular
* kar98 (riflenade and scoped)
* m1 garand (riflenade and scoped)

--- a/etmain/models/multiplayer/binocs/weapon.cfg
+++ b/etmain/models/multiplayer/binocs/weapon.cfg
@@ -1,11 +1,13 @@
 ///////////////////////
 //
-//		MAUSER + RIFLENADE
+//		Binocs
 //
 ///////////////////////
 
+
 newfmt
 // config file for weapon animations
+
 
 //                                             	 barrel                     	 barrel
 //    first     length      fps      looping  	anim bits      animated weap   	draw bits
@@ -17,19 +19,20 @@ newfmt
 ///   	 /   	 /   	 /   	 /   	 /   	 ______________________________/
 //   	/   	/   	/   	/   	/   	/
 
-0	1	20	1	0	0	0	// IDLE1 (for kar98)
-125	1	20	1	0	0	0	// IDLE2 (for gpg40)
+5	1	20	1	0	0	0	// WEAP_IDLE1
+17	1	20	1	0	0	0	// WEAP_IDLE2
 
-1	10	20	0	0	0	0	// ATTACK1 (for kar98)
-72	5	10	0	0	0	0	// ATTACK2 (for gpg40)
-16	11	20	0	0	0	0	// ATTACK_LASTSHOT (for kar98)
+5	1	1	0	0	0	0	// WEAP_ATTACK1
+5	1	1	0	0	0	0	// WEAP_ATTACK2
+5	1	1	0	0	0	0	// WEAP_ATTACK_LASTSHOT
 
-29	5	20	0	0	0	0	// DROP (for kar98)
-34	7	20	0	0	0	0	// RAISE (for kar98)
-41	23	14	1	0	0	0	// RELOAD1 (for kar98)
-2	47	30	1	0	0	0	// RELOAD2 (for gpg40)
-131	5	20	1	0	0	0	// RAISE (for gpg40)
+29	5	15	0	0	0	0	// WEAP_DROP - DROP FROM VIEW
+0	5	15	0	0	0	0	// WEAP_RAISE - RAISE To VIEW
+1	1	1	0	0	0	0	// WEAP_RELOAD1
+1	1	1	0	0	0	0	// WEAP_RELOAD2
+1	1	1	0	0	0	0	// WEAP_RELOAD3
 
-78	47	20	0	0	0	0	// equipping grenade (for gpg40)
-147	28	20	0	0	0	0	// un-equipping grenade
-128	4	20	0	0	0	0	// DROP2 (for gpg40)
+17	5	15	0	0	0	0	// WEAP_ALTSWITCHFROM - DROP FROM EYES
+5	9	15	0	0	0	0	// WEAP_ALTSWITCHTO - RASE TO EYES
+
+1	1	1	0	0	0	0	// WEAP_DROP2
