--- a/etmain/models/multiplayer/kar98/weapon2.cfg
+++ b/etmain/models/multiplayer/kar98/weapon2.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //
-//		MAUSER + RIFLENADE
+//		MAUSER + SCOPE
 //
 ///////////////////////
 
@@ -18,18 +18,19 @@ newfmt
 //   	/   	/   	/   	/   	/   	/
 
 0	1	20	1	0	0	0	// IDLE1 (for kar98)
-125	1	20	1	0	0	0	// IDLE2 (for gpg40)
+128	1	20	1	0	0	0	// IDLE2 (for gpg40)
 
 1	10	20	0	0	0	0	// ATTACK1 (for kar98)
-72	5	10	0	0	0	0	// ATTACK2 (for gpg40)
+130 5   10	0   0   0   0   // ATTACK2 (for gpg40)
 16	11	20	0	0	0	0	// ATTACK_LASTSHOT (for kar98)
 
 29	5	20	0	0	0	0	// DROP (for kar98)
 34	7	20	0	0	0	0	// RAISE (for kar98)
 41	23	14	1	0	0	0	// RELOAD1 (for kar98)
-2	47	30	1	0	0	0	// RELOAD2 (for gpg40)
-131	5	20	1	0	0	0	// RAISE (for gpg40)
+136	46	20	1	0	0	0	// RELOAD2 (for gpg40)
+190	5	20	1	0	0	0	// RAISE (for gpg40)
 
-78	47	20	0	0	0	0	// equipping grenade (for gpg40)
-147	28	20	0	0	0	0	// un-equipping grenade
-128	4	20	0	0	0	0	// DROP2 (for gpg40)
+29	5	20	0	0	0	0	// zooming in
+34	7	20	0	0	0	0	// zooming out
+
+185	5	20	0	0	0	0	// DROP (for gpg40)
