--- a/etmain/models/multiplayer/m1_garand/weapon.cfg
+++ b/etmain/models/multiplayer/m1_garand/weapon.cfg
@@ -1,6 +1,6 @@
 ///////////////////////
 //
-//		MAUSER + RIFLENADE
+//		M1 GARAND + RIFLENADE
 //
 ///////////////////////
 
@@ -17,19 +17,19 @@ newfmt
 ///   	 /   	 /   	 /   	 /   	 /   	 ______________________________/
 //   	/   	/   	/   	/   	/   	/
 
-0	1	20	1	0	0	0	// IDLE1 (for kar98)
-125	1	20	1	0	0	0	// IDLE2 (for gpg40)
+0	1	20	1	0	0	0	// IDLE1
+135	1	20	1	0	0	0	// IDLE2
 
-1	10	20	0	0	0	0	// ATTACK1 (for kar98)
-72	5	10	0	0	0	0	// ATTACK2 (for gpg40)
-16	11	20	0	0	0	0	// ATTACK_LASTSHOT (for kar98)
+1	5	25	0	0	0	0	// ATTACK1
+76	9	20	0	0	0	0	// ATTACK2
+40	5	20	0	0	0	0	// ATTACK_LASTSHOT (for M1-garand)
 
-29	5	20	0	0	0	0	// DROP (for kar98)
-34	7	20	0	0	0	0	// RAISE (for kar98)
-41	23	14	1	0	0	0	// RELOAD1 (for kar98)
-2	47	30	1	0	0	0	// RELOAD2 (for gpg40)
-131	5	20	1	0	0	0	// RAISE (for gpg40)
+29	5	20	0	0	0	0	// DROP (for M1-garand)
+34	7	20	0	0	0	0	// RAISE
+44	20	14	1	0	0	0	// RELOAD1
+130	49	20	1	0	0	0	// RELOAD2
+173	5	20	1	0	0	0	// RAISE (for M7)
 
-78	47	20	0	0	0	0	// equipping grenade (for gpg40)
-147	28	20	0	0	0	0	// un-equipping grenade
-128	4	20	0	0	0	0	// DROP2 (for gpg40)
+85	52	20	0	0	0	0	// ALTSWITCHFROM equipping grenade
+135	29	20	0	0	0	0 	// ALTSWITCHTO   un-equipping grenade
+164	5	20	0	0	0	0	// DROP2 (for M7)
