mod: merged shuffle XP and SR commands, refs #403 #1299

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -117,10 +117,8 @@ set vote_allow_matchreset "1"                   // allow match reset by vote
 set vote_allow_mutespecs "1"                    // allow spectators mute by vote
 set vote_allow_nextmap "1"                      // allow changing to next map by vote
 set vote_allow_referee "0"                      // allow getting referee status by vote
-set vote_allow_shuffleteamsxp "1"               // allow team XP shuffling by vote
-set vote_allow_shuffleteamsxp_norestart "1"     // allow team XP shuffling no restart by vote
-set vote_allow_shuffleteamssr "1"               // allow team SR shuffling by vote
-set vote_allow_shuffleteamssr_norestart "1"     // allow team SR shuffling no restart by vote
+set vote_allow_shuffleteams "1"                 // allow team shuffling by vote
+set vote_allow_shuffleteams_norestart "1"       // allow team shuffling no restart by vote
 set vote_allow_swapteams "1"                    // allow team swapping by vote
 set vote_allow_friendlyfire "1"                 // allow friendly fire toggling by vote
 set vote_allow_timelimit "0"                    // allow map time limit changing by vote
