mod: added foundation for prestige tracking feature, refs #1155
Add underlying support:
* additional session var
* additional scoreboard
* info window stats
* end of game stats
* debriefing screen
* cmake enabling macro

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -57,6 +57,7 @@ set g_dropAmmo "2"
 set g_dropHealth "2"
 set g_countryflags "1"
 set g_skillRating "2"
+set g_prestige "1"
 set g_mapScriptDirectory "mapscripts"
 set g_campaignFile ""
 set g_customConfig ""
