general: added FEATURE_PNG in cmake, refs #1300

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ LEG_BUNDLE(SDL SDL)
 LEG_BUNDLE(ZLIB Zlib)
 LEG_BUNDLE(MINIZIP Minizip)
 LEG_BUNDLE(JPEG JPEG)
+LEG_BUNDLE(PNG libpng)
 LEG_BUNDLE(CURL Curl "NOT APPLE")
 LEG_BUNDLE(OPENSSL OpenSSL "OFF")
 LEG_BUNDLE(LUA Lua)
@@ -54,6 +55,7 @@ option(FEATURE_OGG_VORBIS		"Enable OGG Vorbis support (client)"					ON)
 option(FEATURE_THEORA			"Enable Theora video support (client)"					ON)
 option(FEATURE_OPENAL			"Enable OpenAL sound backend (client)"					ON)
 option(FEATURE_FREETYPE			"Enable Freetype font library support (client)"			ON)
+option(FEATURE_PNG				"Enable PNG screenshot support (client)"				ON)
 option(FEATURE_LUA				"Enable Lua support (mod)"								ON)
 option(FEATURE_MULTIVIEW		"Enable multiview support (mod)"						ON)
 option(FEATURE_EDV				"Enable extended demo viewer support (mod)"				ON)
