misc: added BUNDLED_PNG to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - BUNDLED_ZLIB=1
     - BUNDLED_MINIZIP=1
     - BUNDLED_JPEG=1
+    - BUNDLED_PNG=1
     - BUNDLED_LUA=1
     - BUNDLED_OGG=1
     - INSTALL_EXTRA=0
