general: adjusted wiki links to new location

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -1,8 +1,8 @@
 // ET: Legacy server sample config file. Make this file your own.
 
-// see https://dev.etlegacy.com/projects/etlegacy/wiki
-//     https://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
-//     https://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars
+// see https://github.com/etlegacy/etlegacy/wiki
+//     https://github.com/etlegacy/etlegacy/wiki/Set-up-Features
+//     https://github.com/etlegacy/etlegacy/wiki/List-of-Cvars
 //
 // Lua server administration suite provided by WolfAdmin
 // see https://dev.timosmit.com/wolfadmin/
