--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@
 #---------------------------------#
 
 # version format
-version: 2.75.{build}
+version: "{build}"
 
 # you can use {branch} name in version format too
 # version: 1.0.{build}-{branch}
@@ -14,11 +14,11 @@ branches:
     - master
 
 # Build worker image (VM template)
-image: Visual Studio 2015
+image: Visual Studio 2019
 
 # environment variables
 environment:
-  VisualStudioVersion: "14.0"
+  VisualStudioVersion: "16.0"
 
 # scripts that run after cloning repository
 install:
@@ -55,3 +55,11 @@ notifications:
     on_build_success: false
     on_build_failure: true
     on_build_status_changed: true
+
+# Discord notification
+#on_success:
+#  - ps: Invoke-RestMethod https://raw.githubusercontent.com/DiscordHooks/appveyor-discord-webhook/master/send.ps1 -o send.ps1
+#  - ps: ./send.ps1 success $env:WEBHOOK_URL
+on_failure:
+  - ps: Invoke-RestMethod https://raw.githubusercontent.com/DiscordHooks/appveyor-discord-webhook/master/send.ps1 -o send.ps1
+  - ps: ./send.ps1 failure $env:WEBHOOK_URL
