general: ensure project name consistency, refs #1332
And removed potentially problematic trademarked wording usage.

--- a/Info.plist
+++ b/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>etl</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Wolfenstein Enemy Territory: Legacy</string>
+	<string>ET: Legacy</string>
 	<key>CFBundleIconFile</key>
 	<string>etl.icns</string>
 	<key>CFBundleIdentifier</key>
