--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -8,7 +8,7 @@
 // see https://dev.timosmit.com/wolfadmin/
 
 
-// ET LEGACY ENGINE ONLY
+// ET: LEGACY ENGINE ONLY
 
 // LOGGING & PROTECTION
 
@@ -55,9 +55,9 @@ set sv_wwwFallbackURL ""                        // URL to send to if an http/ftp
 
 // MOTD ETC
 
-set sv_hostname "ET Legacy Host"                // name of server here
+set sv_hostname "ET: Legacy Host"                // name of server here
 // max length is "12345678901234567890123456"   // (message should not be longer than this without the color codes)
-set server_motd0 " ^NET Legacy ^7MOTD "         // message in right corner of join screen here
+set server_motd0 " ^NET: Legacy ^7MOTD "         // message in right corner of join screen here
 set server_motd1 ""
 set server_motd2 ""
 set server_motd3 ""
