--- a/src/sys/win_resource.rc
+++ b/src/sys/win_resource.rc
@@ -111,10 +111,10 @@ BEGIN
 			VALUE "CompanyName", "Legacy Team"
 			VALUE "FileDescription", "etl"
 			VALUE "FileVersion", PRODUCT_VERSIONSTR
-			VALUE "InternalName", "Enemy Territory Legacy"
-			VALUE "LegalCopyright", "2012-2020 ET:Legacy Team"
+			VALUE "InternalName", "ET: Legacy"
+			VALUE "LegalCopyright", "2012-2020 ET: Legacy Team"
 			VALUE "OriginalFilename", "etl.exe"
-			VALUE "ProductName", "Enemy Territory Legacy"
+			VALUE "ProductName", "ET: Legacy"
 			VALUE "ProductVersion", PRODUCT_VERSIONSTR
 		END
 	END
