Add stopwatch gametype
Add stopwatch gametype as per existing League configurations used on ETPro: https://github.com/msh100/ETPro-configs/blob/master/configs/global1.config

--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -12,6 +12,7 @@ init
   setl sv_pure "1"
   setl sv_cheats "0"
 
+  setl g_gameType "3"
   setl g_warmup "15"
   setl g_doWarmup "1"
   setl g_voiceChatsAllowed "5"
