game: added callvote cointoss, refs #505

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -129,6 +129,7 @@ set vote_allow_muting "1"                       // allow player muting by vote
 set vote_allow_surrender "1"                    // allow surrender by vote
 set vote_allow_restartcampaign "1"              // allow restart campaign by vote
 set vote_allow_nextcampaign "1"                 // allow next campaign by vote
+set vote_allow_cointoss "1"                     // allow coin toss by vote
 set vote_allow_poll "1"                         // allow free polls by vote
 
 // MOD CFG - put mod related vars in an own config
