--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -91,6 +91,7 @@ init
   setl vote_allow_timelimit "1"
   setl vote_allow_warmupdamage "0"
   setl vote_allow_maprestart "1"
+  setl vote_allow_cointoss "1"
   setl vote_limit "99"
   setl vote_percent "51"
 
